Update shelf activity indicator for tabbed web app.

Currently when a tab activates/deactivates, the updated shelf id
is written to the kShelfIDKey window property, but not used on the Ash
side until a browser window activates/deactivates.

Bug: 883130
Test: ash_unit_tests --gtest_filter=ShelfController*
Change-Id: I0f167b41593abb57931f514ecea48ad547ea70cd
Reviewed-on: https://chromium-review.googlesource.com/c/1401225
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620963}
Former-commit-id: ec9110f4862deffb7419d0255d8bc273be7c9809